@startuml
!include detailed_style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Project {
    class "{abstract}\nTrackedItem" as TrackedItem {
        {field} reminder: Reminder
        {method} removeReminder() : TrackedItem { abstract }
        {method} updatedExpiredReminder() : TrackedItem { abstract }
    }
    class Project {
        {method} rescheduleReminder(reminderManager: ReminderManager) : void
        {method} removeReminder(task: Task) : Project
    }
    class Task {}
}

package Reminder {
    class Reminder {
        {field} dateTimeWrapper : Optional<DateTimeWrapper>
        {field} expired : boolean
        {static} {method} isValid(dateTimeStr: String) : boolean
        {method} canSchedule() : boolean
        {method} remove() : Reminder
        {method} updateExpired() : Reminder
    }
    class ReminderManager {
        {field} model : Model
        {field} timer : Timer
        {field} currReminder : StringProperty
        {method} rescheduleReminder() : void
        {method} rescheduleReminder(project: Project) : void
        {method} rescheduleReminder(project: Project, task: Task) : void
        {method} updateCurrReminder(project: Project) : void
        {method} updateCurrReminder(project: Project, task: Task) : void
        {method} isReminderEmpty() : boolean
        {method} removeReminder() : void
        {method} getReminder() : StringProperty
    }
}

class ProjectBook {
    {method} rescheduleReminder() : void
    {method} removeReminder(project: Project) : Project
    {method} removeReminder(project: Project, task: Task) : Project
}

class "<<interface>>\nModel" as Model {
    {method} rescheduleReminder() : void
    {method} removeReminder(project: Project) : Project
    {method} removeReminder(project: Project, task: Task) : Project
    {method} isReminderEmpty() : boolean
    {method} removeReminderShown() : void
    {method} getReminder() : StringProperty
}

class ModelManager {
    {method} rescheduleReminders() : void
}

TrackedItem <|--Project
TrackedItem <|--Task
Project *-"*" Task

ModelManager ..|> Model
ProjectBook "1" -left-* ModelManager : < manages
ReminderManager "1" --* ModelManager : < manages

TrackedItem "*" -right-* ProjectBook
Reminder "0..1" --* TrackedItem

@enduml
